# CA_HW2_ForwardKinematics

./: CMakeLists.txt  ForwardKinematics.sln  README.md  imgui.ini
ForwardKinematics/: ForwardKinematics.vcxproj  ForwardKinematics.vcxproj.filters  main.cpp
assets/Acclaim/: punch_kick.amc  skeleton.asf
assets/Shader/: render.frag  render.vert
cmake/cputest/: avx512.cpp
include/: acclaim.h  graphics.h  icons.h  simulation.h  util.h
include/acclaim/: bone.h  motion.h  posture.h  skeleton.h
include/graphics/: box.h  buffer.h  camera.h  configs.h  cylinder.h  default_camera.h  free_camera.h  plane.h  rigidbody.h  shader.h  sphere.h  texture.h
include/simulation/: ball.h  kinematics.h
include/util/: filesystem.h  helper.h  types.h
src/acclaim/: motion.cpp  posture.cpp  skeleton.cpp
src/graphics/: box.cpp  camera.cpp  cylinder.cpp  default_camera.cpp  free_camera.cpp  plane.cpp  rigidbody.cpp  shader.cpp  sphere.cpp  texture.cpp
src/simulation/: ball.cpp  kinematics.cpp
src/util/: filesystem.cpp  helper.cpp
